--- a/SoNguyenTo.html
+++ b/SoNguyenTo.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <script>
-        
-        function songuyento(numbers){
-            let count = 0
-            let countSNT = 0
-            for(let N=2;N<1000;N++){
-                if(countSNT<count){
-                    for (let j = 1; j <= N; j++) {
-                        if (N % j == 0) {
-                            count += 1;
-                        }
+        let number = +prompt('Nhập số lượng số nguyên tố cần kiểm tra')
+        let N = 2
+        let count = 0
+        let countSNT = 0
+        for (N = 2; N < 10000; N++) {
+            if (count < number) {
+                for (j = 1; j <= N; j++) {
+                    if (N % j == 0) {
+                        countSNT += 1
                     }
-                    if(count == 2){
-                        document.write(N + "<br>")
-                        countSNT +=1
-                    }
-                    count = 0;
-                } else {
-                    break;
                 }
+                if (countSNT == 2) {
+                    document.write(N + '<br>')
+                    count += 1
+                }
+                countSNT = 0
+            } else {
+                break;
             }
         }
-        let numbers= parseInt(prompt('Nhập n số nguyên tố đầu tiên:'));
-        songuyento(numbers);
+
     </script>
+
 </body>
+
 </html>
